[package]
name = "bili-to-tg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
digest = "0.10.7"
hex = "0.4.3"
pem = "3.0.5"
qrcode-generator = "5.0.0"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
rsa = "0.9.8"
sea-orm = "1.1.11"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
